fixed navigation screen overlapping

--- a/src/loader/loader.css
+++ b/src/loader/loader.css
@@ -2,13 +2,13 @@
     width: 100%;
     height: 100%;
     background: #009e00;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
     transition: 0.6s;
-    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
     justify-content: center;
     align-items: center;
+    z-index: 2000;
 }
 
 .hide {
